# MagicParams

./: Cargo.toml  README.md
src/: lib.rs
tests/: context.rs
