[package]
name = "magic-params"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"
description = "Macro to call functions with typed arguments derived from a shared context."
authors = ["xiao-e-yun <a0970323059@gmail.com>"]
repository = "https://github.com/xiao-e-yun/MagicParams"

[dependencies]
paste = "1.0.15"
seq-macro = "0.3.6"
